# org-parser

./: .gitignore  AGENTS.md  README.org  ROADMAP.org  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile
.github/workflows/: docs-page.yml  parser-checks.yml  release.yml
docs/: document-structure.md  elements.md  index.md  mutability.md  rich-text.md  time.md
docs/plans/: ROADMAP_ARCHIVE.org
src/org_parser/: __init__.py  _lang.py  _node.py
src/org_parser/document/: __init__.py  _body.py  _document.py  _heading.py  _loader.py
src/org_parser/element/: __init__.py  _babel.py  _block.py  _drawer.py  _element.py  _keyword.py  _list.py  _paragraph.py  _structure.py  _structure_recovery.py  _table.py
src/org_parser/text/: __init__.py  _inline.py  _rich_text.py
src/org_parser/time/: _clock.py  _timestamp.py
tests/: test_block_elements.py  test_clock_elements.py  test_drawer_elements.py  test_error_recovery.py  test_from_source.py  test_list_elements.py  test_repeat_elements.py  test_rich_text_objects.py  test_semantic.py  test_sequence_protocols.py  test_setters.py  test_timestamp.py
tests/snapshots/examples/: checkboxes-basic.snapshot  drawers.snapshot  large.snapshot  ordered-list-basic.snapshot  plain-lists.snapshot  showcase.snapshot  text-markup.snapshot
