[tool.poetry]
name = "org-parser"
version = "0.24.0"
description = "A parser for Org Mode documents"
authors = ["Kajetan Rzepecki <k@spartan.works>"]
maintainers = ["Kajetan Rzepecki <k@spartan.works>"]
homepage = "https://github.com/Idorobots/org-parser"
repository = "https://github.com/Idorobots/org-parser"
documentation = "https://idorobots.github.io/org-parser/"
keywords = ["parsing", "tree-sitter", "org", "org-mode"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
license = "MIT"
readme = "docs/index.md"
packages = [{ include = "org_parser", from = "src" }]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Idorobots/org-parser/issues"
"Releases" = "https://github.com/Idorobots/org-parser/releases"

[tool.poetry.dependencies]
python = "^3.12"
tree-sitter = ">=0.25,<1.0"
tree-sitter-org = "0.23.7"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11"
ruff = "^0.8"
taskipy = "^1.14.1"
pytest = "^8.3"
pytest-cov = "^6.0"
pyright = "^1.1"
mkdocs = "^1.6"
mkdocs-section-index = "^0.3"
mkdocs-autorefs = "^1.4"
mkdocs-material = "^9.7.6"
mkdocstrings = { version = "^0.30", extras = ["python"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# taskipy — useful tasks
# ---------------------------------------------------------------------------

[tool.taskipy.tasks]
test = "pytest --cov=src/ --cov-report=term-missing"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
format-check = "ruff format --check src/ tests/"
format = "ruff format src/ tests/"
type = "mypy src/ tests"
docs-build = "mkdocs build --strict"
docs-serve = "mkdocs serve"
check = "task format-check && task lint && task type && task test"

# ---------------------------------------------------------------------------
# ruff — linting & formatting
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Docstring style: prefer D211 (no blank line before class docstring) and
    # D212 (summary on first line); disable the conflicting alternatives.
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    # Formatter compatibility and readability expectations in this codebase.
    "COM812", # missing-trailing-comma (handled by formatter)
    "ISC001", # single-line-implicit-string-concatenation (handled by formatter)
    # Rules that are currently too noisy or conflict with project patterns.
    "DTZ001", # call-datetime-without-tzinfo
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison (too many false positives in tests)
    "SLF001", # private-member-access
    "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # docstrings not required in test files
    "PT011",  # existing tests intentionally assert broad ValueError paths
    "PT015",  # legacy assertion style retained in negative-path tests
    "PT018",  # compound assertions retained for concise readability
    "S101",   # assert is expected in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["org_parser"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# mypy — static type checking
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
# Use the src layout
mypy_path = "src"

[[tool.mypy.overrides]]
# tree-sitter ships incomplete type stubs; suppress import errors for it.
module = ["tree_sitter", "tree_sitter.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short --strict-markers -q"
markers = ["integration: tests that require the compiled org.so shared library"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
